--- a/spring-ai/src/main/resources/application.properties
+++ b/spring-ai/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/users?serverTimezone=Asia/Shanghai&useSSL=false&characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://localhost:3306/users?serverTimezone=Asia/Shanghai&useSSL=false&characterEncoding=utf8&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=wuyuhao123456#
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
