模型参数配置

--- a/spring-ai/src/main/resources/application.properties
+++ b/spring-ai/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=spring-ai
 spring.ai.openai.api-key=sk-lleozqhffqyvzlrfypagnsdfkssewmtjsvcfrpmspokgxadw
 spring.ai.openai.chat.base-url=https://api.siliconflow.cn/
-spring.ai.openai.chat.options.model=Qwen/Qwen3-8B
-#spring.ai.openai.chat.options.model=deepseek-ai/DeepSeek-R1-Distill-Qwen-7B
+#spring.ai.openai.chat.options.model=Qwen/Qwen3-8B
+spring.ai.openai.chat.options.model=deepseek-ai/DeepSeek-R1-Distill-Qwen-7B
 spring.ai.openai.chat.options.temperature=0.8
 logging.level.org.springframework.ai.chat.client.advisor=DEBUG
 
