--- a/spring-ai/pom.xml
+++ b/spring-ai/pom.xml
@@ -81,8 +81,16 @@
             <artifactId>mybatis-plus-generator</artifactId>
             <version>3.5.12</version>
         </dependency>
-
-
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-extension</artifactId>
+            <version>3.5.12</version>
+        </dependency>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-jsqlparser</artifactId>
+            <version>3.5.12</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
