--- a/spring-ai/src/main/resources/application.properties
+++ b/spring-ai/src/main/resources/application.properties
@@ -57,16 +57,16 @@ spring.datasource.druid.web-stat-filter.exclusions=*.js,*.gif,*.jpg,*.png,*.css,
 
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 mybatis-plus.global-config.db-config.id-type=auto
+mybatis-plus.mapper-locations=classpath:mapper/*.xml
+mybatis-plus.type-aliases-package=cn.sdtbu.edu.entity
 
 server.port=8080
 
-# 文件上传配置
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
 spring.servlet.multipart.file-size-threshold=2KB
 
-# 文件存储路径配置
 file.upload.path=src/main/resources/static/uploads/
 file.upload.avatar-path=src/main/resources/static/uploads/avatars/
 file.upload.base-url=/uploads/
